<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3A54A9">

    <Button
        android:id="@+id/acessarTrabalho"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="Acessar Trabalho"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:backgroundTint="#028CCF"/>
    <TextView
        android:id="@+id/nomeEscola"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nomeEscola"
        android:layout_marginTop="110dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:shadowColor="#2E2E2E"
        android:shadowRadius="2"
        android:shadowDx="3"
        android:shadowDy="3"
        android:fontFamily="sans-serif-black"
        />
    <TextView
        android:id="@+id/nomeDepartamento"
        android:layout_below="@+id/nomeEscola"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nomeDepartamento"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:shadowColor="#2E2E2E"
        android:shadowRadius="2"
        android:shadowDx="3"
        android:shadowDy="3"
        android:fontFamily="sans-serif-black"
        />

    <TextView
        android:id="@+id/nomeCurso"
        android:layout_below="@+id/nomeDepartamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nomeCurso"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:shadowColor="#2E2E2E"
        android:shadowRadius="2"
        android:shadowDx="3"
        android:shadowDy="3"
        android:fontFamily="sans-serif-black"
        />

    <ImageView
        android:id="@+id/logoPuc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:srcCompat="@drawable/pucgo"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/nomeCurso"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"/>

    <TextView
        android:id="@+id/nomeAtividade"
        android:layout_below="@+id/logoPuc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nomeAtividade"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:shadowColor="#2E2E2E"
        android:shadowRadius="2"
        android:shadowDx="3"
        android:shadowDy="3"
        android:fontFamily="sans-serif-black"
        />

    <TextView
        android:id="@+id/nomeAluno"
        android:layout_below="@+id/nomeAtividade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nomeAluno"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:shadowColor="#672E4B"
        android:shadowRadius="2"
        android:shadowDx="3"
        android:shadowDy="3"
        android:fontFamily="sans-serif-black"
        />

    <TextView
        android:id="@+id/cidadeEstado"
        android:layout_below="@+id/nomeAluno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cidadeEstado"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:shadowColor="#2E2E2E"
        android:shadowRadius="2"
        android:shadowDx="3"
        android:shadowDy="3"
        android:fontFamily="sans-serif-black"
        />

    <TextView

        android:layout_below="@+id/cidadeEstado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ano"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:shadowColor="#2E2E2E"
        android:shadowRadius="2"
        android:shadowDx="3"
        android:shadowDy="3"
        android:fontFamily="sans-serif-black"
        />


</RelativeLayout>